--- a/app/src/main/res/layout/content_verify_identity_kyc_service_gray.xml
+++ b/app/src/main/res/layout/content_verify_identity_kyc_service_gray.xml
@@ -17,7 +17,7 @@
         app:highlightColor="@color/transparent"
         app:highlightRadius="0dp"
         app:highlightText="@string/kyc_contact_service_hilight"
-        app:highlightTextColor="@color/color_025BE8_025BE8"
+        app:highlightTextColor="@color/color_A5A9B3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
