--- a/app/src/main/res/layout/fragment_profile_center.xml
+++ b/app/src/main/res/layout/fragment_profile_center.xml
@@ -8,29 +8,34 @@
     android:background="@color/color_F0F5FA"
     android:overScrollMode="never"
     android:scrollbars="none">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
         <FrameLayout
             android:id="@+id/lin_person"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/ic_personal_bg"
             android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/ic_personal_bg" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <include layout="@layout/view_status_bar" />
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/tool_bar_height"
-                    android:paddingHorizontal="18dp">
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <include layout="@layout/view_status_bar" />
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/tool_bar_height"
+                        android:paddingHorizontal="18dp">
 
                     <ImageView
                         android:id="@+id/iv_menu"
@@ -198,11 +203,10 @@
                     android:paddingTop="@dimen/margin_5"
                     android:paddingBottom="@dimen/margin_5">
 
-
                     <TextView
                         android:id="@+id/tv_funds"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="20dp"
                         android:drawableLeft="@drawable/ic_icon_wallet_small"
                         android:drawablePadding="@dimen/margin_3"
                         android:text="@string/account_balance"
@@ -246,7 +250,6 @@
                         android:fontFamily="@font/roboto_medium_numbers"
                         android:textColor="@color/color_ECCD86"
                         android:textSize="@dimen/textSize20sp"
-                        android:textStyle="bold"
                         app:autoSizeMaxTextSize="20dp"
                         app:autoSizeMinTextSize="2dp"
                         app:layout_constraintEnd_toStartOf="@+id/btn_refresh_money"
@@ -274,14 +277,12 @@
             </LinearLayout>
 
 
-        </FrameLayout>
 
         <LinearLayout
             android:id="@+id/lin_wallet_operation"
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:layout_marginStart="@dimen/margin_14"
-            android:layout_marginTop="-45dp"
             android:layout_marginEnd="@dimen/margin_14"
             android:background="@drawable/bg_white_walle"
             android:gravity="center"
@@ -661,19 +662,19 @@
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:layout_alignParentRight="true"
+                                android:layout_centerVertical="true"
+                                android:layout_marginRight="20dp"
                                 android:layout_toRightOf="@+id/tv_help"
                                 android:gravity="center_vertical|end"
-                                android:layout_centerVertical="true"
-                                android:layout_alignParentRight="true"
-                                android:layout_marginRight="20dp"
                                 android:orientation="horizontal">
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_centerVertical="true"
-                                    android:singleLine="true"
                                     android:ellipsize="end"
+                                    android:singleLine="true"
                                     android:text="@string/faqs"
                                     android:textColor="@color/color_A7B2C4"
                                     android:textSize="@dimen/textSize12sp" />
@@ -687,9 +688,9 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:singleLine="true"
-                                    android:ellipsize="end"
                                     android:layout_centerVertical="true"
+                                    android:ellipsize="end"
+                                    android:singleLine="true"
                                     android:text="@string/game_rule"
                                     android:textColor="@color/color_A7B2C4"
                                     android:textSize="@dimen/textSize12sp" />
@@ -703,9 +704,10 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:singleLine="true"
-                                    android:ellipsize="end"
+                                    android:maxWidth="60dp"
                                     android:layout_centerVertical="true"
+                                    android:ellipsize="end"
+                                    android:singleLine="true"
                                     android:text="@string/feedback"
                                     android:textColor="@color/color_A7B2C4"
                                     android:textSize="@dimen/textSize12sp" />
@@ -1526,5 +1528,6 @@
             </LinearLayout>
 
         </LinearLayout>
-    </LinearLayout>
+            </LinearLayout>
+        </FrameLayout>
 </ScrollView>
