OK-1318 【OKBET-UI改版-Android-我的】 資金明細-存款/提款/轉換/歷史-有資料時，底部不應出現灰色圖層

--- a/app/src/main/res/layout/content_feedback_record_list_rv.xml
+++ b/app/src/main/res/layout/content_feedback_record_list_rv.xml
@@ -4,15 +4,14 @@
     android:id="@+id/ll_content"
     android:layout_width="match_parent"
     android:layout_height="48dp"
-    android:background="@color/color_191919_FCFCFC"
+    android:background="@color/color_1D1F2D_FFFFFF"
     android:gravity="center"
     android:orientation="vertical"
     tools:ignore="SpUsage"
     tools:context=".ui.feedback.record.FeedbackListAdapter">
 
     <LinearLayout
-        android:layout_marginLeft="@dimen/margin_20"
-        android:layout_marginRight="@dimen/margin_20"
+       android:layout_marginHorizontal="@dimen/margin_1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
