--- a/app/src/main/res/layout/edittext_login.xml
+++ b/app/src/main/res/layout/edittext_login.xml
@@ -5,6 +5,7 @@
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/color_191919_FCFCFC"
     tools:context="org.cxct.sportlottery.ui.login.LoginEditText">
 
     <TextView
@@ -24,7 +25,6 @@
         android:id="@+id/block_editText"
         android:layout_width="0dp"
         android:layout_height="44dp"
-        android:background="@drawable/effect_edittext_bg"
         android:focusable="true"
         android:gravity="center"
         android:orientation="horizontal"
@@ -53,8 +53,8 @@
             android:layout_width="1dp"
             android:layout_height="20dp"
             android:layout_margin="10dp"
-            android:visibility="invisible"
-            android:background="@color/color_1F1F1F_E2E2E2" />
+            android:background="@color/color_1F1F1F_E2E2E2"
+            android:visibility="invisible" />
 
         <EditText
             android:id="@+id/et_input"
@@ -63,15 +63,15 @@
             android:layout_weight="1"
             android:autofillHints="no"
             android:background="@null"
-            android:singleLine="true"
-            android:scrollHorizontally="true"
-            app:autoSizeMaxTextSize="@dimen/textSize12sp"
-            app:autoSizeMinTextSize="@dimen/textSize8sp"
+            android:ellipsize="end"
             android:inputType="text"
+            android:scrollHorizontally="true"
+            android:singleLine="true"
             android:textColor="@color/color_BBBBBB_333333"
             android:textColorHint="@color/color_404040_cccccc"
             android:textSize="@dimen/textSize12sp"
-            android:ellipsize="end"
+            app:autoSizeMaxTextSize="@dimen/textSize12sp"
+            app:autoSizeMinTextSize="@dimen/textSize8sp"
             tools:hint="@string/please_input_account" />
 
 
@@ -90,9 +90,9 @@
             android:contentDescription="@null"
             android:gravity="center"
             android:padding="6dp"
+            android:src="@drawable/ic_close_edittext"
             android:visibility="gone"
-            tools:visibility="visible"
-            android:src="@drawable/ic_close_edittext" />
+            tools:visibility="visible" />
 
         <LinearLayout
             android:id="@+id/btn_eye"
@@ -132,20 +132,30 @@
 
     </LinearLayout>
 
+    <View
+        android:id="@+id/v_bottom_line"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="18dp"
+        android:background="@drawable/effect_edittext_bottom_line"
+        android:focusable="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/block_editText"
+        app:layout_constraintTop_toBottomOf="@+id/block_editText" />
+
     <TextView
         android:id="@+id/tv_error"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:drawablePadding="5dp"
+        android:layout_marginTop="4dp"
         android:gravity="center_vertical"
         android:textColor="@color/color_F75452_E23434"
         android:textSize="@dimen/textSize12sp"
         android:visibility="gone"
-        app:drawableStartCompat="@drawable/ic_error_tip"
-        app:layout_constraintStart_toStartOf="@id/block_editText"
-        app:layout_constraintTop_toBottomOf="@id/block_editText"
-        app:layout_constraintEnd_toEndOf="@id/block_editText"
+        app:layout_constraintEnd_toEndOf="@id/v_bottom_line"
+        app:layout_constraintStart_toStartOf="@id/v_bottom_line"
+        app:layout_constraintTop_toBottomOf="@id/v_bottom_line"
         tools:text="@string/please_input_account"
         tools:visibility="visible" />
 
