--- a/app/src/main/res/layout/edittext_login.xml
+++ b/app/src/main/res/layout/edittext_login.xml
@@ -80,6 +80,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/withdraw_all"
+            android:padding="4dp"
             android:textColor="@color/color_025BE8"
             android:textSize="@dimen/textSize13sp" />
 
