--- a/app/src/main/res/layout/fragment_withdraw.xml
+++ b/app/src/main/res/layout/fragment_withdraw.xml
@@ -150,8 +150,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="16dp"
-                        android:orientation="vertical"
-                        android:paddingEnd="10dp">
+                        android:orientation="vertical">
 
                         <TextView
                             android:id="@+id/tv_channel_select"
@@ -217,6 +216,7 @@
                         android:id="@+id/tv_hint_withdraw_rate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
                         android:textColor="@color/color_E44438_e44438"
                         android:textSize="@dimen/textSize12sp"
                         tools:text="@string/withdraw_handling_fee_hint" />
@@ -225,6 +225,7 @@
                         android:id="@+id/tv_hint_withdraw_crypto_amount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
                         android:layout_marginTop="8dp"
                         android:textColor="@color/color_E44438_e44438"
                         android:textSize="@dimen/textSize12sp"
@@ -234,6 +235,7 @@
                         android:id="@+id/tv_hint_withdraw_crypto_fee"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
                         android:layout_marginTop="8dp"
                         android:textColor="@color/color_E44438_e44438"
                         android:textSize="@dimen/textSize12sp"
@@ -291,7 +293,6 @@
                             android:id="@+id/tv_detail"
                             android:layout_width="wrap_content"
                             android:layout_height="22dp"
-                            android:layout_marginEnd="10dp"
                             android:enabled="false"
                             android:gravity="center"
                             android:paddingHorizontal="4dp"
@@ -302,11 +303,20 @@
 
                     </LinearLayout>
 
+                    <!-- 提款密碼 -->
+                    <org.cxct.sportlottery.ui.login.LoginEditText
+                        android:id="@+id/et_withdrawal_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        app:cvHint="@string/hint_four_number_password"
+                        app:cvInputType="numberPassword"
+                        app:cvTextColor="@color/color_414655"
+                        app:cvTitle="@string/withdraw_password" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="44dp"
-                        android:layout_marginTop="@dimen/margin_10"
                         android:background="@drawable/effect_edittext_bg"
                         android:focusable="true"
                         android:gravity="center"
@@ -342,18 +352,6 @@
 
                     </LinearLayout>
 
-                    <!-- 提款密碼 -->
-                    <org.cxct.sportlottery.ui.login.LoginEditText
-                        android:id="@+id/et_withdrawal_password"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        app:cvHint="@string/hint_four_number_password"
-                        app:cvInputType="numberPassword"
-                        app:cvTextColor="@color/color_414655"
-                        app:cvTitle="@string/withdraw_password" />
-
-
                     <TextView
                         android:id="@+id/btn_withdraw"
                         android:layout_width="match_parent"
@@ -362,6 +360,7 @@
                         android:layout_marginStart="@dimen/margin_20"
                         android:layout_marginTop="12dp"
                         android:layout_marginEnd="@dimen/margin_20"
+                        android:alpha="0.5"
                         android:background="@drawable/ic_submit"
                         android:paddingVertical="9dp"
                         android:text="@string/submit"
@@ -369,8 +368,7 @@
                         android:textAllCaps="true"
                         android:textColor="@color/color_FFFFFF_FFFFFF"
                         android:textSize="@dimen/textSize16sp"
-                        android:textStyle="bold"
-                        android:alpha="0.5"/>
+                        android:textStyle="bold" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
@@ -445,11 +443,11 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <LinearLayout
-                        android:layout_marginBottom="@dimen/dp_40"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginTop="@dimen/margin_20"
+                        android:layout_marginBottom="@dimen/dp_40"
                         android:orientation="horizontal">
 
                         <TextView
@@ -457,7 +455,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/customer_service"
                             android:textColor="@color/color_A5A9B3"
-                            android:textSize="@dimen/textSize14sp"/>
+                            android:textSize="@dimen/textSize14sp" />
 
                         <TextView
                             android:id="@+id/tv_service"
@@ -465,7 +463,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/btn_service"
                             android:textColor="@color/color_025BE8"
-                            android:textSize="@dimen/textSize14sp"/>
+                            android:textSize="@dimen/textSize14sp" />
 
                     </LinearLayout>
 
