--- a/app/src/main/res/drawable/bg_square_shape_6dp_gray_deposit_stroke.xml
+++ b/app/src/main/res/drawable/bg_square_shape_6dp_gray_deposit_stroke.xml
@@ -4,5 +4,5 @@
     <corners android:radius="10dp"  />
     <stroke android:width="1dp"
         android:color="#D3DEF5"/>
-    <solid android:color="@color/exo_white"/>
+    <solid android:color="@color/color_202541_FFFFFF"/>
 </shape>
