--- a/app/src/main/res/drawable/bg_white_top_radius_deposit_10.xml
+++ b/app/src/main/res/drawable/bg_white_top_radius_deposit_10.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#F4F4F4" />
+    <solid android:color="@color/color_232C4F_F4F4F4" />
     <corners
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp" />
