--- a/app/src/main/res/layout/fragment_other_bet_record.xml
+++ b/app/src/main/res/layout/fragment_other_bet_record.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_181922_FFFFFF"
+    android:background="@color/color_202541_FFFFFF"
     android:orientation="vertical"
-    tools:context=".ui.profileCenter.otherBetRecord.OtherBetRecordFragment">
+    tools:context=".ui.profileCenter.otherBetRecord.OtherBetRecordFragment"
+    tools:ignore="SpUsage">
 
     <org.cxct.sportlottery.ui.component.DateRangeSearchNewView
         android:id="@+id/date_search_bar"
@@ -17,7 +18,8 @@
     <org.cxct.sportlottery.ui.component.StatusSpinnerView
         android:id="@+id/status_selector"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="@dimen/margin_15"
         android:background="@color/color_232C4F_F3F9FF"
         app:defaultStatusText="@string/all_plat_type"
         app:layout_constraintTop_toBottomOf="@id/date_search_bar" />
@@ -26,20 +28,19 @@
         android:id="@+id/tvUsTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="@dimen/margin_8"
-        android:layout_marginHorizontal="@dimen/margin_10"
+        android:layout_marginTop="@dimen/margin_10"
+        android:layout_marginHorizontal="@dimen/margin_20"
         android:drawablePadding="@dimen/margin_6"
         android:text="@string/text_us_east_time"
-        android:textColor="@color/color_E23434"
-        android:textSize="@dimen/textSize12sp"
+        android:textColor="@color/color_E23434_E23434"
+        android:textSize="@dimen/textSize14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/status_selector"
         android:visibility="visible" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_10"
-        android:layout_marginRight="@dimen/margin_10"
+        android:layout_marginHorizontal="@dimen/margin_20"
         android:background="@drawable/bg_square_shape_6dp_gray_deposit_stroke"
         android:orientation="vertical"
         android:layout_marginTop="@dimen/margin_10"
@@ -51,8 +52,8 @@
         <LinearLayout
             android:id="@+id/rech_log_column"
             android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:paddingBottom="@dimen/margin_3"
+            android:layout_height="@dimen/margin_36"
+            android:paddingHorizontal="@dimen/margin_14"
             android:layout_marginTop="@dimen/margin_1"
             android:layout_marginLeft="@dimen/margin_1"
             android:layout_marginRight="@dimen/margin_1"
@@ -62,46 +63,48 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="1"
+                android:layout_weight="1.5"
                 android:gravity="center"
                 android:maxLines="1"
+                android:ellipsize="end"
                 android:paddingStart="2dp"
                 android:text="@string/date"
-                android:textColor="@color/color_414655"
+                android:textColor="@color/color_FFFFFF_414655"
                 android:textSize="@dimen/textSize12sp" />
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="1"
+                android:layout_weight="1.5"
                 android:gravity="center"
                 android:maxLines="1"
+                android:ellipsize="end"
                 android:text="@string/bet_number"
-                android:textColor="@color/color_414655"
+                android:textColor="@color/color_FFFFFF_414655"
                 android:textSize="@dimen/textSize12sp" />
             <TextView
                 android:id="@+id/rech_log_recharge_amount"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:gravity="center"
                 android:maxLines="1"
+                android:ellipsize="end"
                 android:text="@string/bet_money"
-                android:textColor="@color/color_414655"
+                android:textColor="@color/color_FFFFFF_414655"
                 android:textSize="@dimen/textSize12sp" />
-
-
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="1"
+                android:layout_weight="1.5"
                 android:gravity="center"
                 android:maxLines="1"
+                android:ellipsize="end"
                 android:text="@string/profit_and_loss"
-                android:textColor="@color/color_414655"
+                android:textColor="@color/color_FFFFFF_414655"
                 android:textSize="@dimen/textSize12sp" />
         </LinearLayout>
 
@@ -109,39 +112,20 @@
             android:id="@+id/view_refresh"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_1"
-            android:layout_marginRight="@dimen/margin_1"
-            android:layout_marginBottom="@dimen/margin_7"
             app:layout_constraintTop_toBottomOf="@id/rech_log_column"
             app:srlDragRate="0.3"
             app:srlEnableLoadMore="true"
             app:srlEnablePureScrollMode="true">
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_record"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/margin_8"
+                    android:layout_height="360dp"
                     android:overScrollMode="never"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:listitem="@layout/view_item_recharge_log"
+                    tools:listitem="@layout/item_other_bet_record"
                     tools:itemCount="2"/>
 
-                <include
-                    android:id="@+id/view_no_record"
-                    layout="@layout/view_no_record"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rech_log_column"
-                    tools:visibility="gone" />
-
-            </FrameLayout>
         </com.scwang.smart.refresh.layout.SmartRefreshLayout>
 
     </LinearLayout>
