--- a/app/src/main/res/layout/item_other_bet_record.xml
+++ b/app/src/main/res/layout/item_other_bet_record.xml
@@ -14,22 +14,17 @@
     </data>
 
     <LinearLayout
-        android:layout_marginLeft="@dimen/margin_20"
-        android:layout_marginRight="@dimen/margin_20"
+        android:layout_marginHorizontal="@dimen/margin_14"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginVertical="0.5dp"
-        android:background="@color/color_202541_FFFFFF"
         android:onClick="@{() -> clickListener.onClick(data)}">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:background="@color/color_191919_FCFCFC"
+            android:layout_height="49dp"
             android:orientation="horizontal"
-            android:paddingHorizontal="4dp"
-            android:paddingVertical="12dp"
             android:gravity="center">
 
             <TextView
@@ -37,26 +32,26 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.5"
-                android:gravity="start"
+                android:gravity="center"
                 android:maxLines="1"
-                android:textColor="@color/color_BBBBBB_333333"
+                android:textColor="@color/color_FFFFFF_414655"
                 android:textSize="@dimen/textSize12sp"
                 app:autoSizeMaxTextSize="@dimen/textSize12sp"
                 app:autoSizeMinTextSize="@dimen/textSize8sp"
-                app:date="@{data.statDate}"
-                tools:text="2021-02-25" />
+                app:date2="@{data.statDate}"
+                tools:text="2021/02/25" />
 
             <TextView
                 android:id="@+id/tv_play_cate_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="4dp"
+                android:layout_marginStart="4dp"
                 android:layout_weight="1.5"
                 android:ellipsize="end"
                 android:gravity="center"
                 android:maxLines="1"
                 android:text="@{data.betCount.toString()}"
-                android:textColor="@color/color_BBBBBB_333333"
+                android:textColor="@color/color_9BB3D9_535D76"
                 android:textSize="@dimen/textSize12sp"
                 app:autoSizeMaxTextSize="@dimen/textSize12sp"
                 app:autoSizeMinTextSize="@dimen/textSize8sp"
@@ -70,7 +65,7 @@
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="2"
                 android:gravity="center"
-                android:textColor="@color/color_BBBBBB_333333"
+                android:textColor="@color/color_9BB3D9_535D76"
                 android:textSize="@dimen/textSize12sp"
                 app:moneyFormat="@{data.betAmount}"
                 tools:text="999,999,9.000" />
@@ -92,11 +87,8 @@
         <View
             android:id="@+id/divider"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/color_191919_EEEFF0"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:layout_height="0.5dp"
+            android:background="@color/color_80334266_E3E8EE" />
 
     </LinearLayout>
 </layout>
