--- a/app/src/main/res/layout/item_other_bet_record_detail.xml
+++ b/app/src/main/res/layout/item_other_bet_record_detail.xml
@@ -11,27 +11,28 @@
     </data>
 
     <LinearLayout
-        android:layout_marginLeft="@dimen/margin_20"
-        android:layout_marginRight="@dimen/margin_20"
         android:layout_width="match_parent"
-        android:minHeight="48dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_14"
+        android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:minHeight="49dp"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:background="@color/color_202541_FFFFFF"
-        android:orientation="horizontal"
-        android:paddingHorizontal="4dp"
-        android:paddingVertical="12dp">
+        android:orientation="horizontal">
         <TextView
             android:id="@+id/tv_date_time"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="4dp"
-            android:layout_weight="1.5"
+            android:layout_weight="1.7"
             android:gravity="center"
-            android:textColor="@color/color_BBBBBB_333333"
+            android:textColor="@color/color_FFFFFF_414655"
             android:textSize="@dimen/textSize12sp"
-            android:text="@{data.betTime}"
-            tools:text="999,999,999.000" />
+            app:dateChangeLineTime="@{data.betTime}"
+            tools:text="2022/08/13\n08:03:250" />
         <TextView
             android:id="@+id/tv_game_name"
             android:layout_width="0dp"
@@ -39,7 +40,7 @@
             android:layout_weight="1.25"
             android:gravity="center"
             android:maxLines="1"
-            android:textColor="@color/color_FFFFFF_535D76"
+            android:textColor="@color/color_9BB3D9_535D76"
             android:textSize="@dimen/textSize12sp"
             android:textStyle="bold"
             app:autoSizeMaxTextSize="@dimen/textSize12sp"
@@ -54,7 +55,7 @@
             android:layout_marginHorizontal="4dp"
             android:layout_weight="1.5"
             android:gravity="center"
-            android:textColor="@color/color_BBBBBB_333333"
+            android:textColor="@color/color_FFFFFF_414655"
             android:textSize="@dimen/textSize12sp"
             app:moneyFormat="@{data.betAmount}"
             tools:text="999,999,999.000" />
@@ -81,11 +82,19 @@
             android:ellipsize="end"
             android:gravity="center"
             android:text="@{data.orderNo}"
-            android:textColor="@color/color_BBBBBB_333333"
+            android:textColor="@color/color_FFFFFF_414655"
             android:textSize="@dimen/textSize12sp"
             app:autoSizeMaxTextSize="@dimen/textSize12sp"
             app:autoSizeMinTextSize="@dimen/textSize8sp"
             tools:text="12345678912345" />
+
+    </LinearLayout>
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/color_80334266_E3E8EE" />
 
     </LinearLayout>
 
