--- a/app/src/main/res/layout/transfer_pay_fragment.xml
+++ b/app/src/main/res/layout/transfer_pay_fragment.xml
@@ -35,7 +35,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
                     android:text="@string/title_bank"
-                    android:textColor="@color/color_CCCCCC_000000"
+                    android:textColor="@color/color_9FADC6_535D76"
                     android:textSize="@dimen/textSize13sp"
                     android:textStyle="bold" />
 
@@ -413,7 +413,88 @@
             app:cardCornerRadius="5dp"
             app:cardElevation="0dp">
 
-            <LinearLayout
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="44dp"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="14dp"
+                        android:gravity="center_vertical"
+                        android:maxLines="1"
+                        android:text="@string/title_recharge_time"
+                        android:textColor="@color/color_D2E4FF_414655"
+                        android:textSize="@dimen/textSize13sp" />
+
+                    <LinearLayout
+                        android:id="@+id/ll_transfer_time"
+                        android:gravity="center|end"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:id="@+id/txv_transfer_time"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:background="@null"
+                            android:gravity="center"
+                            android:maxLines="1"
+                            android:singleLine="true"
+                            android:textColor="@color/color_9FADC6_535D76"
+                            android:textSize="@dimen/textSize12sp"
+                            app:autoSizeMaxTextSize="@dimen/textSize12sp"
+                            app:autoSizeMinTextSize="@dimen/textSize8sp"
+                            tools:text="2020-13-25" />
+                        <ImageView
+                            android:layout_width="35dp"
+                            android:layout_height="45dp"
+                            android:contentDescription="@null"
+                            android:scaleType="centerInside"
+                            android:src="@drawable/ic_arrow_gray" />
+                    </LinearLayout>
+                    <View
+                        android:background="@color/color_272F41_E3E8EE"
+                        android:layout_marginVertical="@dimen/margin_12"
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"/>
+                    <LinearLayout
+                        android:id="@+id/ll_transfer_time2"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:id="@+id/txv_transfer_time2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:background="@null"
+                            android:gravity="center"
+                            android:maxLines="1"
+                            android:singleLine="true"
+                            android:textColor="@color/color_9FADC6_535D76"
+                            android:textSize="@dimen/textSize12sp"
+                            app:autoSizeMaxTextSize="@dimen/textSize12sp"
+                            app:autoSizeMinTextSize="@dimen/textSize8sp"
+                            tools:text="19:35:35 (GMT+8)" />
+                        <ImageView
+                            android:layout_width="35dp"
+                            android:layout_height="45dp"
+                            android:contentDescription="@null"
+                            android:scaleType="centerInside"
+                            android:src="@drawable/ic_arrow_gray" />
+                    </LinearLayout>
+                </LinearLayout>
+
+
+
+            <!--<LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
                 android:gravity="center"
@@ -467,7 +548,7 @@
                     android:src="@drawable/ic_icon_timev_01" />
 
             </LinearLayout>
-
+-->
 
         </androidx.cardview.widget.CardView>
 
