--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -171,4 +171,5 @@
     <color name="color_272F41_E3E8EE">@color/color_272F41</color>
     <color name="color_D2E4FF_414655">@color/color_D2E4FF</color>
     <color name="color_9FADC6_A5A9B3">@color/color_9FADC6</color>
+    <color name="color_191D2F_F3F9FF">@color/color_191D2F</color>
 </resources>
