优化收藏赛事列表

--- a/app/src/main/res/layout/activity_register_ok.xml
+++ b/app/src/main/res/layout/activity_register_ok.xml
@@ -1114,7 +1114,7 @@
                             android:id="@+id/tvPrivacy"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/margin_10"
+                            android:layout_marginHorizontal="@dimen/margin_10"
                             android:layout_marginTop="2dp"
                             android:gravity="left"
                             android:lineSpacingExtra="3dp"
@@ -1128,7 +1128,7 @@
                             android:id="@+id/tvAgreement"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/margin_10"
+                            android:layout_marginHorizontal="@dimen/margin_10"
                             android:layout_marginTop="2dp"
                             android:gravity="left"
                             android:lineSpacingExtra="3dp"
@@ -1144,7 +1144,7 @@
                             android:id="@+id/tvNotPHOfficial"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/margin_10"
+                            android:layout_marginHorizontal="@dimen/margin_10"
                             android:layout_marginTop="2dp"
                             android:gravity="left"
                             android:lineSpacingExtra="3dp"
@@ -1160,7 +1160,7 @@
                             android:id="@+id/tvNotPHSchool"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/margin_10"
+                            android:layout_marginHorizontal="@dimen/margin_10"
                             android:layout_marginTop="2dp"
                             android:gravity="left"
                             android:lineSpacingExtra="3dp"
@@ -1175,9 +1175,8 @@
                             android:id="@+id/tvRuleOkbet"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/margin_10"
+                            android:layout_marginHorizontal="@dimen/margin_10"
                             android:layout_marginTop="2dp"
-                            android:layout_marginRight="@dimen/margin_10"
                             android:gravity="left"
                             android:lineSpacingExtra="3dp"
                             android:textColor="@color/color_A7B2C4"
@@ -1191,7 +1190,7 @@
                             android:id="@+id/cbAgreeAll"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/margin_10"
+                            android:layout_marginHorizontal="@dimen/margin_10"
                             android:layout_marginTop="8dp"
                             android:layout_marginBottom="@dimen/margin_10"
                             android:button="@drawable/effect_register_select_checkbox"
@@ -1208,6 +1207,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
+                            android:layout_marginRight="10dp"
                             android:gravity="left"
                             android:lineSpacingExtra="3dp"
                             android:textColor="#535D76"
