--- a/app/src/main/res/layout/content_odds_detail_list_item.xml
+++ b/app/src/main/res/layout/content_odds_detail_list_item.xml
@@ -29,9 +29,8 @@
             android:layout_marginStart="6dp"
             android:textColor="@color/color_414655"
             android:textSize="@dimen/textSize14sp"
-            android:textStyle="bold"
             android:textAllCaps="true"
-            android:fontFamily="@font/helvetica"
+            android:fontFamily="@font/din_font"
             app:layout_constraintLeft_toRightOf="@+id/viewLeftLine"
             app:layout_constraintRight_toLeftOf="@+id/odd_detail_pin"
             app:layout_constraintTop_toTopOf="parent"
